--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "csscomb",
+  "name": "csscomb-ext",
   "description": "CSS coding style formatter",
   "version": "4.0.1",
-  "homepage": "http://csscomb.com/",
+  "homepage": "https://github.com/drugan/csscomb.js-ext",
   "author": "Mikhail Troshev <mishanga@yandex-team.ru>",
-  "repository": "https://github.com/csscomb/csscomb.js",
+  "repository": "https://github.com/drugan/csscomb.js-ext",
   "license": "MIT",
   "maintainers": [
     {
       "name": "Tony Ganch",
       "email": "tonyganch+github@gmail.com",
       "web": "http://tonyganch.com/"
+    },
+    {
+      "name": "Vladimir Proshin",
+      "email": "proshins@gmail.com",
+      "web": "https://github.com/drugan/csscomb.js-ext"
     }
   ],
   "engines": {
